--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@ phoneRegionCode: "US",
 </marquee></center>
 <script src="functions.js" type="module"></script>
 <script src="index.js" type="module"></script>
-   </body>
+
+</script>
+</body>
 </html>
+
 
