--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ phoneRegionCode: "US",
 <button id="add-button">POST</button>
 <input  type="text" id="input-field" placeholder="ENTER TEXT HERE ..CLICK POST BUTTON">
 <center><marquee width="80%" direction="up" height="300px">
-<a href="https://www.youtube.com/watch?v=EpAHj-YmECQ" target="_blank">Watch LIve Former President Donald Trump speaks in Austin ahead of Joe Rogan interview | Livestream
+<a href="https://www.youtube.com/watch?v=EpAHj-YmECQ" target="_blank">Former President Donald Trump speaks in Austin ahead of Joe Rogan interview | Livestream
 </a></br></br></br></br></br>
 <a href="https://www.kcci.com/article/lil-durk-charged-2022-los-angeles-killing/62719613" target="_blank">Grammy-winning rapper Lil Durk charged with orchestrating 2022 Los Angeles killing</a></br></br></br></br></br>
 <a href="https://www.nbcnews.com/news/us-news/vince-mcmahon-wwe-accused-allowing-rampant-sexual-exploitation-young-b-rcna176988" target="_blank">Vince McMahon and WWE accused of allowing 'rampant' sexual exploitation of young boys by announcer in new lawsuit
